// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated style shape snapshots > osm colorful (dark) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-track-bicycle",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-service-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-track-bicycle",
    "line:street-pedestrian-bicycle",
    "line:street-service-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-bus:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-track-bicycle",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-service-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:marking-bicycle",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful (light) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-track-bicycle",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-service-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-track-bicycle",
    "line:street-pedestrian-bicycle",
    "line:street-service-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-bus:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-track-bicycle",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-service-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:marking-bicycle",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful with terrain + hillshade + extruded buildings 1`] = `
{
  "hasLight": true,
  "hasSky": true,
  "hasTerrain": true,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "hillshade:hillshade",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-track-bicycle",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-service-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-lightrail:outline",
    "line:tunnel-transport-lightrail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-lightrail",
    "line:tunnel-transport-lightrail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-track-bicycle",
    "line:street-pedestrian-bicycle",
    "line:street-service-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-bus:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-track-bicycle",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-service-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:marking-bicycle",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
    "fill-extrusion:building-3d",
  ],
  "sources": [
    "elevation",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite raster-only (no overlay) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-symbols",
    "background:slot-below-labels",
  ],
  "sources": [
    "satellite",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite with toner overlay 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-streets",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-track-bicycle",
    "line:street-pedestrian-bicycle",
    "line:street-service-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-lightrail:outline",
    "line:transport-lightrail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-lightrail",
    "line:transport-lightrail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-bus:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-track-bicycle",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-service-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-lightrail:outline",
    "line:bridge-transport-lightrail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-lightrail",
    "line:bridge-transport-lightrail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:marking-bicycle",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "satellite",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > variant layer counts 1`] = `
{
  "colorful-terrain/de": 289,
  "colorful-terrain/en": 289,
  "colorful-terrain/style": 289,
  "colorful/de": 288,
  "colorful/en": 288,
  "colorful/nolabel": 256,
  "colorful/style": 288,
  "eclipse-terrain/de": 289,
  "eclipse-terrain/en": 289,
  "eclipse-terrain/style": 289,
  "eclipse/de": 288,
  "eclipse/en": 288,
  "eclipse/nolabel": 256,
  "eclipse/style": 288,
  "empty/style": 5,
  "gray-terrain/de": 289,
  "gray-terrain/en": 289,
  "gray-terrain/style": 289,
  "gray/de": 288,
  "gray/en": 288,
  "gray/nolabel": 256,
  "gray/style": 288,
  "graybeard-terrain/de": 289,
  "graybeard-terrain/en": 289,
  "graybeard-terrain/style": 289,
  "graybeard/de": 288,
  "graybeard/en": 288,
  "graybeard/nolabel": 256,
  "graybeard/style": 288,
  "muted-terrain/de": 289,
  "muted-terrain/en": 289,
  "muted-terrain/style": 289,
  "muted/de": 288,
  "muted/en": 288,
  "muted/nolabel": 256,
  "muted/style": 288,
  "natural-terrain/de": 289,
  "natural-terrain/en": 289,
  "natural-terrain/style": 289,
  "natural/de": 288,
  "natural/en": 288,
  "natural/nolabel": 256,
  "natural/style": 288,
  "neutrino-terrain/de": 289,
  "neutrino-terrain/en": 289,
  "neutrino-terrain/style": 289,
  "neutrino/de": 288,
  "neutrino/en": 288,
  "neutrino/nolabel": 256,
  "neutrino/style": 288,
  "satellite/de": 189,
  "satellite/en": 189,
  "satellite/overlay": 189,
  "satellite/style": 5,
  "shadow-terrain/de": 289,
  "shadow-terrain/en": 289,
  "shadow-terrain/style": 289,
  "shadow/de": 288,
  "shadow/en": 288,
  "shadow/nolabel": 256,
  "shadow/style": 288,
  "terrain/de": 190,
  "terrain/en": 190,
  "terrain/overlay": 190,
  "terrain/style": 6,
  "toner-terrain/de": 289,
  "toner-terrain/en": 289,
  "toner-terrain/style": 289,
  "toner/de": 288,
  "toner/en": 288,
  "toner/nolabel": 256,
  "toner/style": 288,
}
`;
